--- a/@isle-project/components/pages/pages.css
+++ b/@isle-project/components/pages/pages.css
@@ -20,6 +20,7 @@
 }
 
 .page-link {
+	color: #0273eb;
 	padding: 0.75rem 1rem;
 	background-color: #fff;
 	border: 1.25px solid #dee2e6;
